--- a/Study/Closing the Gap Study Revisited.ipynb
+++ b/Study/Closing the Gap Study Revisited.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The below is from how the orginal studin in \"Closing the Gap: Reducing Racial and Ethnic Disparities\" was conducted:\n",
+    "The below is from how the orginal study in \"Closing the Gap: Reducing Racial and Ethnic Disparities\" was conducted:\n",
     "\n",
     "   This brief draws on the 2012–2013 Behavioral Risk Factor Surveillance System (BRFSS), an annual survey conducted by the Centers for Disease Control and Prevention in partnership with state governments. The surveys included landline and cellular telephone interviews with more than 400,000 adults age 18 and older across all 50 states. In performing our analysis, we combined two years of data to ensure an adequate sample size in each of the socioeconomic strata, including income, race and ethnicity, and insurance status. <font color=\"red\">We restricted our analysis to adults under age 65. </font>\n",
     "   BRFSS asks adults whether they did not visit a doctor when needed within the previous 12 months because of costs, and whether they have one or more than one person they think of as their personal doctor or health care provider.\n",
@@ -42,14 +42,7 @@
     "\n",
     "We'll work to reduce the dataset and create an imputed variable from the self-reported measure of health.\n",
     "\n",
-    "The question of interest is, \"Would You Say in General That Your Health is: (1) excellent, (2) very good, (3) good, (4) fair, (5) poor.\" Choices 7 and 9 were \"unsure\" and \"not asked\", respectively. This is in the GENHLTH variable.\n",
-    "\n",
-    "Response variables of interest:\n",
-    "\n",
-    "* _AGE80: Calculated continuous variable for imputed age, values above 80 are collapsed. Any respondent over 80 is included in the 80 year old bracket. \n",
-    "* _INCOMG: Calculated variable for income categories. \n",
-    "    (1) Less than \\$15,000, (2) \\$15,000-\\$24,999, (3) \\$25,000-\\$34,9999, (4) \\$35,000 - \\$49,999, (5) $50,000 or more (9) Don't Know\n",
-    "* _SMOKER3:  Calculated variable for four-level smoker status:  (1)everyday smoker, (2) someday smoker, (3) former smoker, (4) non-smoker, (9) Don't Know\n"
+    "The question of interest is, \"Would You Say in General That Your Health is: (1) excellent, (2) very good, (3) good, (4) fair, (5) poor.\" Choices 7 and 9 were \"unsure\" and \"not asked\", respectively. This is in the GENHLTH variable."
    ]
   },
   {
@@ -61,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 169,
    "metadata": {
     "collapsed": true
    },
@@ -73,35 +66,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting lenght is:  464664\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 275270 entries, 2 to 464663\n",
+      "Data columns (total 39 columns):\n",
+      "IDATE       275270 non-null int64\n",
+      "SEQNO       275270 non-null int64\n",
+      "GENHLTH     275270 non-null float64\n",
+      "HLTHPLN1    275270 non-null int64\n",
+      "PERSDOC2    275269 non-null float64\n",
+      "MEDCOST     275269 non-null float64\n",
+      "CHECKUP1    275269 non-null float64\n",
+      "EXERANY2    275268 non-null float64\n",
+      "SLEPTIM1    275270 non-null int64\n",
+      "CVDINFR4    275270 non-null int64\n",
+      "CVDCRHD4    275270 non-null int64\n",
+      "CVDSTRK3    275270 non-null int64\n",
+      "ASTHMA3     275270 non-null int64\n",
+      "ASTHNOW     38486 non-null float64\n",
+      "CHCSCNCR    275269 non-null float64\n",
+      "CHCOCNCR    275270 non-null float64\n",
+      "CHCCOPD1    275266 non-null float64\n",
+      "HAVARTH3    275269 non-null float64\n",
+      "ADDEPEV2    275269 non-null float64\n",
+      "CHCKIDNY    275269 non-null float64\n",
+      "LASTDEN3    275270 non-null int64\n",
+      "RMVTETH3    275270 non-null int64\n",
+      "INCOME2     272707 non-null float64\n",
+      "USEEQUIP    266888 non-null float64\n",
+      "BLIND       266477 non-null float64\n",
+      "DECIDE      266150 non-null float64\n",
+      "DIFFWALK    265895 non-null float64\n",
+      "DIFFDRES    265734 non-null float64\n",
+      "DIFFALON    265486 non-null float64\n",
+      "SMOKE100    265138 non-null float64\n",
+      "SMOKDAY2    108913 non-null float64\n",
+      "STOPSMK2    47868 non-null float64\n",
+      "LASTSMK2    60750 non-null float64\n",
+      "USENOW3     264907 non-null float64\n",
+      "_IMPRACE    275270 non-null int64\n",
+      "_AGE65YR    275270 non-null int64\n",
+      "_INCOMG     275270 non-null int64\n",
+      "_IMPMRTL    275270 non-null int64\n",
+      "_Health     275270 non-null float64\n",
+      "dtypes: float64(25), int64(14)\n",
+      "memory usage: 84.0 MB\n"
+     ]
+    }
+   ],
    "source": [
-    "cols_to_read = ['_AGE65YR', 'GENHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'CHECKUP1', \n",
-    "                'EXERANY2', 'SLEPTIM1', 'CVDINFR4', 'CVDCRHD4', 'CVDSTRK3', \n",
-    "                'ASTHMA3', 'ASTHNOW', 'CHCSCNCR', 'CHCOCNCR', 'CHCCOPD1', \n",
-    "                'HAVARTH3', 'ADDEPEV2', 'CHCKIDNY', 'LASTDEN3', 'RMVTETH3', \n",
-    "                'USEEQUIP', 'BLIND', 'DECIDE', 'DIFFWALK', 'DIFFDRES', \n",
-    "                'DIFFALON', 'SMOKE100', 'SMOKDAY2', 'STOPSMK2', 'LASTSMK2', \n",
-    "                'USENOW3', '_IMPMRTL', '_INCOMG', 'INCOME2', '_IMPRACE']\n",
+    "brfss = pd.read_csv('brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
+    "print(\"Starting lenght is: \", len(brfss))\n",
     "\n",
-    "brfss = (pd.read_csv(\"..\\\\data\\\\LLCP2014XPT.txt\", sep=\"\\t\", encoding = \"ISO-8859-1\", usecols=cols_to_read)\n",
-    "           .query(\"_AGE65YR == 1\") # Age 18 to 64 - Excludes 65 or older, refused, or missing\n",
-    "           \n",
-    "          \n",
-    "#            .assign(_INC_LEVEL = lambda x: x['INCOME2'].apply({1:1,\n",
-    "#                                                               2:1,\n",
-    "#                                                               3:1,\n",
-    "#                                                               4:1,\n",
-    "#                                                               5:2,}) )\n",
-    "        )\n",
+    "# Age 18 to 64 - Excludes 65 or older, refused, or missing\n",
+    "brfss = brfss[brfss['_AGE65YR'] == 1] \n",
+    "\n",
+    "# Exclude blank, 'Don't know', 'Not Sure', or 'Refused'\n",
+    "brfss = brfss[((brfss['GENHLTH'].notnull()) & (~brfss['GENHLTH'].isin([7,9])))] \n",
     "\n",
     "# Reduce Ethnicity to White, Black, or Hispanic (ex. Asian 2%, American Indian/Alaskan Native 1.55%, other 2.8%)\n",
     "brfss = brfss[brfss['_IMPRACE'].isin([1,2,5])]\n",
     "# Has Health plan --Excludes 'Don't know', 'Not Sure', or 'Refused'. drops .6%\n",
-    "brfss = brfss[brfss['HLTHPLN1'].isin([1,2])]"
+    "brfss = brfss[brfss['HLTHPLN1'].isin([1,2])]\n",
+    "\n",
+    "# Translate GENHLTH to binary classification of\n",
+    "# Combining the “excellent”, “very good” and “good” responses as measures of “good or better” (1) health \n",
+    "# and the “fair” and “poor” measures as “fair and poor” (0).\n",
+    "brfss.loc[(brfss['GENHLTH'] < 4), '_Health'] = 1\n",
+    "brfss.loc[(brfss['GENHLTH'] >= 4), '_Health'] = 0\n",
+    "\n",
+    "brfss.info()"
    ]
   },
   {
@@ -152,14 +195,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 187,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21000"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 275270 entries, 2 to 464663\n",
+      "Data columns (total 37 columns):\n",
+      "GENHLTH     275270 non-null float64\n",
+      "HLTHPLN1    275270 non-null int64\n",
+      "PERSDOC2    275269 non-null float64\n",
+      "MEDCOST     275269 non-null float64\n",
+      "CHECKUP1    275269 non-null float64\n",
+      "EXERANY2    275268 non-null float64\n",
+      "SLEPTIM1    275270 non-null int64\n",
+      "CVDINFR4    275270 non-null int64\n",
+      "CVDCRHD4    275270 non-null int64\n",
+      "CVDSTRK3    275270 non-null int64\n",
+      "ASTHMA3     275270 non-null int64\n",
+      "ASTHNOW     38486 non-null float64\n",
+      "CHCSCNCR    275269 non-null float64\n",
+      "CHCOCNCR    275270 non-null float64\n",
+      "CHCCOPD1    275266 non-null float64\n",
+      "HAVARTH3    275269 non-null float64\n",
+      "ADDEPEV2    275269 non-null float64\n",
+      "CHCKIDNY    275269 non-null float64\n",
+      "LASTDEN3    275270 non-null int64\n",
+      "RMVTETH3    275270 non-null int64\n",
+      "INCOME2     272707 non-null float64\n",
+      "USEEQUIP    266888 non-null float64\n",
+      "BLIND       266477 non-null float64\n",
+      "DECIDE      266150 non-null float64\n",
+      "DIFFWALK    265895 non-null float64\n",
+      "DIFFDRES    265734 non-null float64\n",
+      "DIFFALON    265486 non-null float64\n",
+      "SMOKE100    265138 non-null float64\n",
+      "SMOKDAY2    108913 non-null float64\n",
+      "STOPSMK2    47868 non-null float64\n",
+      "LASTSMK2    60750 non-null float64\n",
+      "USENOW3     264907 non-null float64\n",
+      "_IMPRACE    275270 non-null int64\n",
+      "_AGE65YR    275270 non-null int64\n",
+      "_INCOMG     275270 non-null int64\n",
+      "_IMPMRTL    275270 non-null int64\n",
+      "_Health     231472 non-null float64\n",
+      "dtypes: float64(25), int64(12)\n",
+      "memory usage: 79.8 MB\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn import preprocessing\n",
-    "lb = preprocessing.LabelBinarizer()"
+    "brfss.info()"
    ]
   },
   {
@@ -173,62 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 277159 entries, 2 to 464663\n",
-      "Data columns (total 36 columns):\n",
-      "GENHLTH     277158 non-null float64\n",
-      "HLTHPLN1    277159 non-null int64\n",
-      "PERSDOC2    277158 non-null float64\n",
-      "MEDCOST     277158 non-null float64\n",
-      "CHECKUP1    277158 non-null float64\n",
-      "EXERANY2    277157 non-null float64\n",
-      "SLEPTIM1    277159 non-null int64\n",
-      "CVDINFR4    277159 non-null int64\n",
-      "CVDCRHD4    277159 non-null int64\n",
-      "CVDSTRK3    277159 non-null int64\n",
-      "ASTHMA3     277159 non-null int64\n",
-      "ASTHNOW     38772 non-null float64\n",
-      "CHCSCNCR    277158 non-null float64\n",
-      "CHCOCNCR    277159 non-null float64\n",
-      "CHCCOPD1    277155 non-null float64\n",
-      "HAVARTH3    277158 non-null float64\n",
-      "ADDEPEV2    277158 non-null float64\n",
-      "CHCKIDNY    277158 non-null float64\n",
-      "LASTDEN3    277159 non-null int64\n",
-      "RMVTETH3    277159 non-null int64\n",
-      "INCOME2     274568 non-null float64\n",
-      "USEEQUIP    268662 non-null float64\n",
-      "BLIND       268246 non-null float64\n",
-      "DECIDE      267917 non-null float64\n",
-      "DIFFWALK    267659 non-null float64\n",
-      "DIFFDRES    267493 non-null float64\n",
-      "DIFFALON    267245 non-null float64\n",
-      "SMOKE100    266895 non-null float64\n",
-      "SMOKDAY2    109577 non-null float64\n",
-      "STOPSMK2    48218 non-null float64\n",
-      "LASTSMK2    61058 non-null float64\n",
-      "USENOW3     266662 non-null float64\n",
-      "_IMPRACE    277159 non-null int64\n",
-      "_AGE65YR    277159 non-null int64\n",
-      "_INCOMG     277159 non-null int64\n",
-      "_IMPMRTL    277159 non-null int64\n",
-      "dtypes: float64(24), int64(12)\n",
-      "memory usage: 78.2 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "brfss.info()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
