--- a/Study/BRFSS Data Prep.ipynb
+++ b/Study/BRFSS Data Prep.ipynb
@@ -13,27 +13,14 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "#SAS file locations\n",
-    "df2012 = pd.read_sas(\"..\\\\data\\\\sas Xport files\\\\LLCP2012.XPT\", encoding = \"ISO-8859-1\")\n",
-    "df2013 = pd.read_sas(\"..\\\\data\\\\sas Xport files\\\\LLCP2013.XPT\", encoding = \"ISO-8859-1\")\n",
-    "df2014 = pd.read_sas(\"..\\\\data\\\\sas Xport files\\\\LLCP2014.XPT\", encoding = \"ISO-8859-1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Completed:  ..\\data\\sas Xport files\\LLCP2012.XPT\n",
+      "Completed:  ..\\data\\sas Xport files\\LLCP2013.XPT\n",
+      "Completed:  ..\\data\\sas Xport files\\LLCP2014.XPT\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1432124 entries, 0 to 464663\n",
       "Data columns (total 27 columns):\n",
@@ -84,6 +71,10 @@
     "                'USEEQUIP', 'SMOKE100', 'SMOKDAY2', 'STOPSMK2', 'LASTSMK2', \n",
     "                'USENOW3', '_INCOMG', 'INCOME2', '_IMPRACE']\n",
     "\n",
+    "# Removed below due to uncommon fields\n",
+    "# ['SLEPTIM1' 'BLIND' 'DECIDE' 'DIFFWALK' 'DIFFDRES' 'DIFFALON' '_IMPMRTL'] not in index\n",
+    "# \"['LASTDEN3' 'RMVTETH3'] not in index\"\n",
+    "\n",
     "df12_14 = pd.DataFrame()\n",
     "for sas_file in sas_files:\n",
     "    df = pd.read_sas(sas_file, encoding = \"ISO-8859-1\")\n",
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -293,29 +284,13 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cols_to_read = ['_AGE65YR', 'GENHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'CHECKUP1', \n",
-    "                'EXERANY2', 'CVDINFR4', 'CVDCRHD4', 'CVDSTRK3', \n",
-    "                'ASTHMA3', 'ASTHNOW', 'CHCSCNCR', 'CHCOCNCR', 'CHCCOPD1', \n",
-    "                'HAVARTH3', 'ADDEPEV2', 'CHCKIDNY',  \n",
-    "                'USEEQUIP', 'SMOKE100', 'SMOKDAY2', 'STOPSMK2', 'LASTSMK2', \n",
-    "                'USENOW3', '_INCOMG', 'INCOME2', '_IMPRACE']\n",
-    "\n",
-    "# Removed below due to uncommon fields\n",
-    "# ['SLEPTIM1' 'BLIND' 'DECIDE' 'DIFFWALK' 'DIFFDRES' 'DIFFALON' '_IMPMRTL'] not in index\n",
-    "# \"['LASTDEN3' 'RMVTETH3'] not in index\"\n",
-    "\n",
-    "df12_14 = pd.concat([df2012[cols_to_read],df2013[cols_to_read],df2014[cols_to_read]])\n",
-    "\n",
     "df12_14.to_csv('.\\\\data\\\\brfss2012_2014.csv', index=False)\n",
-    "\n",
-    "# Free up memory\n",
-    "#del df2012, df2013, df2014, df12_14\n",
     "\n",
     "# put in zip file\n",
     "import zipfile, zlib\n",
@@ -331,93 +306,19 @@
     "\n",
     "\n",
     "# Test\n",
-    "df = pd.read_csv('brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
+    "df = pd.read_csv('.\\\\data\\\\brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
     "print(df.shape)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "del df2012, df2013, df2014"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting lenght is:  1432124\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 867987 entries, 0 to 1432123\n",
-      "Data columns (total 28 columns):\n",
-      "_AGE65YR    867987 non-null float64\n",
-      "GENHLTH     867987 non-null float64\n",
-      "HLTHPLN1    867987 non-null float64\n",
-      "PERSDOC2    867986 non-null float64\n",
-      "MEDCOST     867984 non-null float64\n",
-      "CHECKUP1    867985 non-null float64\n",
-      "EXERANY2    848814 non-null float64\n",
-      "CVDINFR4    867985 non-null float64\n",
-      "CVDCRHD4    867987 non-null float64\n",
-      "CVDSTRK3    867987 non-null float64\n",
-      "ASTHMA3     867987 non-null float64\n",
-      "ASTHNOW     120875 non-null float64\n",
-      "CHCSCNCR    867983 non-null float64\n",
-      "CHCOCNCR    867987 non-null float64\n",
-      "CHCCOPD1    867981 non-null float64\n",
-      "HAVARTH3    867984 non-null float64\n",
-      "ADDEPEV2    867985 non-null float64\n",
-      "CHCKIDNY    867983 non-null float64\n",
-      "USEEQUIP    851069 non-null float64\n",
-      "SMOKE100    847083 non-null float64\n",
-      "SMOKDAY2    359144 non-null float64\n",
-      "STOPSMK2    161152 non-null float64\n",
-      "LASTSMK2    197171 non-null float64\n",
-      "USENOW3     846261 non-null float64\n",
-      "_INCOMG     867987 non-null float64\n",
-      "INCOME2     864423 non-null float64\n",
-      "_IMPRACE    867987 non-null float64\n",
-      "_Health     867987 non-null float64\n",
-      "dtypes: float64(28)\n",
-      "memory usage: 192.0 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "brfss = pd.read_csv('brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
-    "print(\"Starting lenght is: \", len(brfss))\n",
-    "\n",
-    "# Age 18 to 64 - Excludes 65 or older, refused, or missing\n",
-    "brfss = brfss[brfss['_AGE65YR'] == 1] \n",
-    "\n",
-    "# Exclude blank, 'Don't know', 'Not Sure', or 'Refused'\n",
-    "brfss = brfss[((brfss['GENHLTH'].notnull()) & (~brfss['GENHLTH'].isin([7,9])))] \n",
-    "\n",
-    "# Reduce Ethnicity to White, Black, or Hispanic (ex. Asian 2%, American Indian/Alaskan Native 1.55%, other 2.8%)\n",
-    "brfss = brfss[brfss['_IMPRACE'].isin([1,2,5])]\n",
-    "# Has Health plan --Excludes 'Don't know', 'Not Sure', or 'Refused'. drops .6%\n",
-    "brfss = brfss[brfss['HLTHPLN1'].isin([1,2])]\n",
-    "\n",
-    "# Translate GENHLTH to binary classification of\n",
-    "# Combining the “excellent”, “very good” and “good” responses as measures of “good or better” (1) health \n",
-    "# and the “fair” and “poor” measures as “fair and poor” (0).\n",
-    "brfss.loc[(brfss['GENHLTH'] < 4), '_Health'] = 1\n",
-    "brfss.loc[(brfss['GENHLTH'] >= 4), '_Health'] = 0\n",
-    "\n",
-    "brfss.info()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
