--- a/Study/BRFSS Data Prep.ipynb
+++ b/Study/BRFSS Data Prep.ipynb
@@ -23,7 +23,7 @@
       "Completed:  ..\\data\\sas Xport files\\LLCP2014.XPT\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1432124 entries, 0 to 464663\n",
-      "Data columns (total 27 columns):\n",
+      "Data columns (total 28 columns):\n",
       "_AGE65YR    1432124 non-null float64\n",
       "GENHLTH     1432109 non-null float64\n",
       "HLTHPLN1    1432122 non-null float64\n",
@@ -51,8 +51,9 @@
       "_INCOMG     1432124 non-null float64\n",
       "INCOME2     1426267 non-null float64\n",
       "_IMPRACE    1432124 non-null float64\n",
-      "dtypes: float64(27)\n",
-      "memory usage: 305.9 MB\n"
+      "SEQNO       1432124 non-null float64\n",
+      "dtypes: float64(28)\n",
+      "memory usage: 316.9 MB\n"
      ]
     }
    ],
@@ -69,7 +70,7 @@
     "                'ASTHMA3', 'ASTHNOW', 'CHCSCNCR', 'CHCOCNCR', 'CHCCOPD1', \n",
     "                'HAVARTH3', 'ADDEPEV2', 'CHCKIDNY',  \n",
     "                'USEEQUIP', 'SMOKE100', 'SMOKDAY2', 'STOPSMK2', 'LASTSMK2', \n",
-    "                'USENOW3', '_INCOMG', 'INCOME2', '_IMPRACE']\n",
+    "                'USENOW3', '_INCOMG', 'INCOME2', '_IMPRACE', 'SEQNO']\n",
     "\n",
     "# Removed below due to uncommon fields\n",
     "# ['SLEPTIM1' 'BLIND' 'DECIDE' 'DIFFWALK' 'DIFFDRES' 'DIFFALON' '_IMPMRTL'] not in index\n",
@@ -99,7 +100,7 @@
       "creating archive\n",
       "adding brfss2012_2014.csv\n",
       "closing\n",
-      "(1432124, 27)\n"
+      "(1432124, 28)\n"
      ]
     },
     {
@@ -121,7 +122,6 @@
        "      <th>CVDCRHD4</th>\n",
        "      <th>CVDSTRK3</th>\n",
        "      <th>...</th>\n",
-       "      <th>CHCKIDNY</th>\n",
        "      <th>USEEQUIP</th>\n",
        "      <th>SMOKE100</th>\n",
        "      <th>SMOKDAY2</th>\n",
@@ -131,6 +131,7 @@
        "      <th>_INCOMG</th>\n",
        "      <th>INCOME2</th>\n",
        "      <th>_IMPRACE</th>\n",
+       "      <th>SEQNO</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -149,7 +150,6 @@
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -157,6 +157,7 @@
        "      <td>4.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -173,7 +174,6 @@
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -181,6 +181,7 @@
        "      <td>5.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -197,7 +198,6 @@
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.0</td>\n",
@@ -205,6 +205,7 @@
        "      <td>9.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -221,7 +222,6 @@
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -229,6 +229,7 @@
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -245,7 +246,6 @@
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -253,10 +253,11 @@
        "      <td>9.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -267,21 +268,21 @@
        "3       2.0      3.0       1.0       1.0      2.0       1.0       2.0   \n",
        "4       1.0      4.0       1.0       1.0      2.0       1.0       1.0   \n",
        "\n",
-       "   CVDINFR4  CVDCRHD4  CVDSTRK3    ...     CHCKIDNY  USEEQUIP  SMOKE100  \\\n",
-       "0       2.0       2.0       2.0    ...          2.0       2.0       2.0   \n",
-       "1       2.0       2.0       2.0    ...          2.0       2.0       2.0   \n",
-       "2       2.0       1.0       2.0    ...          1.0       1.0       1.0   \n",
-       "3       2.0       2.0       2.0    ...          2.0       2.0       2.0   \n",
-       "4       2.0       2.0       2.0    ...          2.0       2.0       2.0   \n",
+       "   CVDINFR4  CVDCRHD4  CVDSTRK3      ...       USEEQUIP  SMOKE100  SMOKDAY2  \\\n",
+       "0       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
+       "1       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
+       "2       2.0       1.0       2.0      ...            1.0       1.0       3.0   \n",
+       "3       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
+       "4       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
        "\n",
-       "   SMOKDAY2  STOPSMK2  LASTSMK2  USENOW3  _INCOMG  INCOME2  _IMPRACE  \n",
-       "0       NaN       NaN       NaN      3.0      4.0      6.0       1.0  \n",
-       "1       NaN       NaN       NaN      3.0      5.0      8.0       1.0  \n",
-       "2       3.0       NaN       7.0      3.0      9.0     99.0       2.0  \n",
-       "3       NaN       NaN       NaN      3.0      2.0      3.0       1.0  \n",
-       "4       NaN       NaN       NaN      3.0      9.0     99.0       1.0  \n",
+       "   STOPSMK2  LASTSMK2  USENOW3  _INCOMG  INCOME2  _IMPRACE         SEQNO  \n",
+       "0       NaN       NaN      3.0      4.0      6.0       1.0  2.012001e+09  \n",
+       "1       NaN       NaN      3.0      5.0      8.0       1.0  2.012001e+09  \n",
+       "2       NaN       7.0      3.0      9.0     99.0       2.0  2.012001e+09  \n",
+       "3       NaN       NaN      3.0      2.0      3.0       1.0  2.012001e+09  \n",
+       "4       NaN       NaN      3.0      9.0     99.0       1.0  2.012001e+09  \n",
        "\n",
-       "[5 rows x 27 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
      "execution_count": 3,
