updated data to match design plan variables

--- a/Study/BRFSS Data Prep.ipynb
+++ b/Study/BRFSS Data Prep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -23,17 +23,34 @@
       "Completed:  ..\\data\\sas Xport files\\LLCP2014.XPT\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1432124 entries, 0 to 464663\n",
-      "Data columns (total 28 columns):\n",
+      "Data columns (total 40 columns):\n",
+      "SEQNO       1432124 non-null float64\n",
+      "_INCOMG     1432124 non-null float64\n",
+      "_IMPRACE    1432124 non-null float64\n",
       "_AGE65YR    1432124 non-null float64\n",
       "GENHLTH     1432109 non-null float64\n",
+      "MENTHLTH    1432114 non-null float64\n",
       "HLTHPLN1    1432122 non-null float64\n",
       "PERSDOC2    1432122 non-null float64\n",
       "MEDCOST     1432121 non-null float64\n",
+      "VETERAN3    1431093 non-null float64\n",
+      "MARITAL     1430329 non-null float64\n",
+      "EDUCA       1429383 non-null float64\n",
       "CHECKUP1    1432121 non-null float64\n",
+      "INCOME2     1426267 non-null float64\n",
+      "SEX         1432124 non-null float64\n",
+      "SMOKDAY2    622351 non-null float64\n",
+      "AVEDRNK2    685267 non-null float64\n",
+      "RRCLASS2    54698 non-null float64\n",
+      "RRATWRK2    28904 non-null float64\n",
+      "RRHCARE3    54581 non-null float64\n",
+      "RRPHYSM2    54523 non-null float64\n",
+      "RREMTSM2    54490 non-null float64\n",
       "EXERANY2    1400796 non-null float64\n",
       "CVDINFR4    1432122 non-null float64\n",
       "CVDCRHD4    1432124 non-null float64\n",
       "CVDSTRK3    1432124 non-null float64\n",
+      "SCNTPAID    66396 non-null float64\n",
       "ASTHMA3     1432124 non-null float64\n",
       "ASTHNOW     189403 non-null float64\n",
       "CHCSCNCR    1432116 non-null float64\n",
@@ -44,16 +61,11 @@
       "CHCKIDNY    1432120 non-null float64\n",
       "USEEQUIP    1402771 non-null float64\n",
       "SMOKE100    1395812 non-null float64\n",
-      "SMOKDAY2    622351 non-null float64\n",
       "STOPSMK2    218909 non-null float64\n",
       "LASTSMK2    402083 non-null float64\n",
       "USENOW3     1394410 non-null float64\n",
-      "_INCOMG     1432124 non-null float64\n",
-      "INCOME2     1426267 non-null float64\n",
-      "_IMPRACE    1432124 non-null float64\n",
-      "SEQNO       1432124 non-null float64\n",
-      "dtypes: float64(28)\n",
-      "memory usage: 316.9 MB\n"
+      "dtypes: float64(40)\n",
+      "memory usage: 448.0 MB\n"
      ]
     }
    ],
@@ -65,14 +77,18 @@
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2013.XPT\",\n",
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2014.XPT\"]\n",
     "\n",
-    "cols_to_read = ['_AGE65YR', 'GENHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'CHECKUP1', \n",
-    "                'EXERANY2', 'CVDINFR4', 'CVDCRHD4', 'CVDSTRK3', \n",
+    "cols_to_read = ['SEQNO', '_INCOMG',  '_IMPRACE', '_AGE65YR', 'GENHLTH', \n",
+    "                'MENTHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'VETERAN3', \n",
+    "                'MARITAL', 'EDUCA', 'CHECKUP1', 'INCOME2', 'SEX', \n",
+    "                'SMOKDAY2', 'AVEDRNK2', 'RRCLASS2', 'RRATWRK2', 'RRHCARE3', \n",
+    "                'RRPHYSM2', 'RREMTSM2', 'EXERANY2', 'CVDINFR4', \n",
+    "                'CVDCRHD4', 'CVDSTRK3', 'SCNTPAID', \n",
     "                'ASTHMA3', 'ASTHNOW', 'CHCSCNCR', 'CHCOCNCR', 'CHCCOPD1', \n",
-    "                'HAVARTH3', 'ADDEPEV2', 'CHCKIDNY',  \n",
-    "                'USEEQUIP', 'SMOKE100', 'SMOKDAY2', 'STOPSMK2', 'LASTSMK2', \n",
-    "                'USENOW3', '_INCOMG', 'INCOME2', '_IMPRACE', 'SEQNO']\n",
+    "                'HAVARTH3', 'ADDEPEV2', 'CHCKIDNY', 'USEEQUIP', 'SMOKE100',  \n",
+    "                'STOPSMK2', 'LASTSMK2', 'USENOW3']\n",
     "\n",
     "# Removed below due to uncommon fields\n",
+    "# ['_AGE80' 'PYSHLTH' 'EMPLOY1' 'SCNTMEL1' 'SXORIENT' 'TRNDGNDR'] not in index\n",
     "# ['SLEPTIM1' 'BLIND' 'DECIDE' 'DIFFWALK' 'DIFFDRES' 'DIFFALON' '_IMPMRTL'] not in index\n",
     "# \"['LASTDEN3' 'RMVTETH3'] not in index\"\n",
     "\n",
@@ -88,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +116,7 @@
       "creating archive\n",
       "adding brfss2012_2014.csv\n",
       "closing\n",
-      "(1432124, 28)\n"
+      "(1432124, 40)\n"
      ]
     },
     {
@@ -111,189 +127,190 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>SEQNO</th>\n",
+       "      <th>_INCOMG</th>\n",
+       "      <th>_IMPRACE</th>\n",
        "      <th>_AGE65YR</th>\n",
        "      <th>GENHLTH</th>\n",
+       "      <th>MENTHLTH</th>\n",
        "      <th>HLTHPLN1</th>\n",
        "      <th>PERSDOC2</th>\n",
        "      <th>MEDCOST</th>\n",
-       "      <th>CHECKUP1</th>\n",
-       "      <th>EXERANY2</th>\n",
-       "      <th>CVDINFR4</th>\n",
-       "      <th>CVDCRHD4</th>\n",
-       "      <th>CVDSTRK3</th>\n",
+       "      <th>VETERAN3</th>\n",
        "      <th>...</th>\n",
+       "      <th>CHCOCNCR</th>\n",
+       "      <th>CHCCOPD1</th>\n",
+       "      <th>HAVARTH3</th>\n",
+       "      <th>ADDEPEV2</th>\n",
+       "      <th>CHCKIDNY</th>\n",
        "      <th>USEEQUIP</th>\n",
        "      <th>SMOKE100</th>\n",
-       "      <th>SMOKDAY2</th>\n",
        "      <th>STOPSMK2</th>\n",
        "      <th>LASTSMK2</th>\n",
        "      <th>USENOW3</th>\n",
-       "      <th>_INCOMG</th>\n",
-       "      <th>INCOME2</th>\n",
-       "      <th>_IMPRACE</th>\n",
-       "      <th>SEQNO</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2.012001e+09</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2.012001e+09</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2.012001e+09</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2.012001e+09</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2.012001e+09</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.012001e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
+       "<p>5 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   _AGE65YR  GENHLTH  HLTHPLN1  PERSDOC2  MEDCOST  CHECKUP1  EXERANY2  \\\n",
-       "0       1.0      3.0       1.0       1.0      2.0       1.0       2.0   \n",
-       "1       1.0      1.0       1.0       1.0      2.0       1.0       1.0   \n",
-       "2       2.0      4.0       1.0       1.0      2.0       1.0       2.0   \n",
-       "3       2.0      3.0       1.0       1.0      2.0       1.0       2.0   \n",
-       "4       1.0      4.0       1.0       1.0      2.0       1.0       1.0   \n",
+       "          SEQNO  _INCOMG  _IMPRACE  _AGE65YR  GENHLTH  MENTHLTH  HLTHPLN1  \\\n",
+       "0  2.012001e+09      4.0       1.0       1.0      3.0      88.0       1.0   \n",
+       "1  2.012001e+09      5.0       1.0       1.0      1.0      88.0       1.0   \n",
+       "2  2.012001e+09      9.0       2.0       2.0      4.0       2.0       1.0   \n",
+       "3  2.012001e+09      2.0       1.0       2.0      3.0      88.0       1.0   \n",
+       "4  2.012001e+09      9.0       1.0       1.0      4.0      88.0       1.0   \n",
        "\n",
-       "   CVDINFR4  CVDCRHD4  CVDSTRK3      ...       USEEQUIP  SMOKE100  SMOKDAY2  \\\n",
-       "0       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
-       "1       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
-       "2       2.0       1.0       2.0      ...            1.0       1.0       3.0   \n",
-       "3       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
-       "4       2.0       2.0       2.0      ...            2.0       2.0       NaN   \n",
+       "   PERSDOC2  MEDCOST  VETERAN3   ...     CHCOCNCR  CHCCOPD1  HAVARTH3  \\\n",
+       "0       1.0      2.0       1.0   ...          2.0       2.0       1.0   \n",
+       "1       1.0      2.0       1.0   ...          2.0       2.0       2.0   \n",
+       "2       1.0      2.0       2.0   ...          2.0       1.0       1.0   \n",
+       "3       1.0      2.0       2.0   ...          2.0       2.0       2.0   \n",
+       "4       1.0      2.0       2.0   ...          2.0       2.0       1.0   \n",
        "\n",
-       "   STOPSMK2  LASTSMK2  USENOW3  _INCOMG  INCOME2  _IMPRACE         SEQNO  \n",
-       "0       NaN       NaN      3.0      4.0      6.0       1.0  2.012001e+09  \n",
-       "1       NaN       NaN      3.0      5.0      8.0       1.0  2.012001e+09  \n",
-       "2       NaN       7.0      3.0      9.0     99.0       2.0  2.012001e+09  \n",
-       "3       NaN       NaN      3.0      2.0      3.0       1.0  2.012001e+09  \n",
-       "4       NaN       NaN      3.0      9.0     99.0       1.0  2.012001e+09  \n",
+       "   ADDEPEV2  CHCKIDNY  USEEQUIP  SMOKE100  STOPSMK2  LASTSMK2  USENOW3  \n",
+       "0       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
+       "1       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
+       "2       1.0       1.0       1.0       1.0       NaN       7.0      3.0  \n",
+       "3       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
+       "4       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
        "\n",
-       "[5 rows x 28 columns]"
+       "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Write large csv first\n",
     "df12_14.to_csv('.\\\\data\\\\brfss2012_2014.csv', index=False)\n",
     "\n",
-    "# put in zip file\n",
+    "# Compress large csv in zip file to allow efficient sharing of data\n",
     "import zipfile, zlib\n",
     "\n",
     "print('creating archive')\n",
