--- a/Study/BRFSS Data Prep.ipynb
+++ b/Study/BRFSS Data Prep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -23,12 +23,13 @@
       "Completed:  ..\\data\\sas Xport files\\LLCP2014.XPT\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1432124 entries, 0 to 464663\n",
-      "Data columns (total 40 columns):\n",
+      "Data columns (total 41 columns):\n",
       "SEQNO       1432124 non-null float64\n",
       "_INCOMG     1432124 non-null float64\n",
       "_IMPRACE    1432124 non-null float64\n",
       "_AGE65YR    1432124 non-null float64\n",
       "GENHLTH     1432109 non-null float64\n",
+      "PHYSHLTH    1432109 non-null float64\n",
       "MENTHLTH    1432114 non-null float64\n",
       "HLTHPLN1    1432122 non-null float64\n",
       "PERSDOC2    1432122 non-null float64\n",
@@ -64,8 +65,8 @@
       "STOPSMK2    218909 non-null float64\n",
       "LASTSMK2    402083 non-null float64\n",
       "USENOW3     1394410 non-null float64\n",
-      "dtypes: float64(40)\n",
-      "memory usage: 448.0 MB\n"
+      "dtypes: float64(41)\n",
+      "memory usage: 458.9 MB\n"
      ]
     }
    ],
@@ -77,7 +78,7 @@
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2013.XPT\",\n",
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2014.XPT\"]\n",
     "\n",
-    "cols_to_read = ['SEQNO', '_INCOMG',  '_IMPRACE', '_AGE65YR', 'GENHLTH', \n",
+    "cols_to_read = ['SEQNO', '_INCOMG',  '_IMPRACE', '_AGE65YR', 'GENHLTH', 'PHYSHLTH',\n",
     "                'MENTHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'VETERAN3', \n",
     "                'MARITAL', 'EDUCA', 'CHECKUP1', 'INCOME2', 'SEX', \n",
     "                'SMOKDAY2', 'AVEDRNK2', 'RRCLASS2', 'RRATWRK2', 'RRHCARE3', \n",
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +117,7 @@
       "creating archive\n",
       "adding brfss2012_2014.csv\n",
       "closing\n",
-      "(1432124, 40)\n"
+      "(1432124, 41)\n"
      ]
     },
     {
@@ -132,11 +133,11 @@
        "      <th>_IMPRACE</th>\n",
        "      <th>_AGE65YR</th>\n",
        "      <th>GENHLTH</th>\n",
+       "      <th>PHYSHLTH</th>\n",
        "      <th>MENTHLTH</th>\n",
        "      <th>HLTHPLN1</th>\n",
        "      <th>PERSDOC2</th>\n",
        "      <th>MEDCOST</th>\n",
-       "      <th>VETERAN3</th>\n",
        "      <th>...</th>\n",
        "      <th>CHCOCNCR</th>\n",
        "      <th>CHCCOPD1</th>\n",
@@ -158,11 +159,11 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>77.0</td>\n",
        "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
@@ -183,10 +184,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>88.0</td>\n",
+       "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
@@ -207,9 +208,9 @@
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
@@ -231,9 +232,9 @@
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>88.0</td>\n",
+       "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
@@ -254,10 +255,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>88.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
@@ -273,23 +274,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          SEQNO  _INCOMG  _IMPRACE  _AGE65YR  GENHLTH  MENTHLTH  HLTHPLN1  \\\n",
-       "0  2.012001e+09      4.0       1.0       1.0      3.0      88.0       1.0   \n",
-       "1  2.012001e+09      5.0       1.0       1.0      1.0      88.0       1.0   \n",
-       "2  2.012001e+09      9.0       2.0       2.0      4.0       2.0       1.0   \n",
-       "3  2.012001e+09      2.0       1.0       2.0      3.0      88.0       1.0   \n",
-       "4  2.012001e+09      9.0       1.0       1.0      4.0      88.0       1.0   \n",
+       "          SEQNO  _INCOMG  _IMPRACE  _AGE65YR  GENHLTH  PHYSHLTH  MENTHLTH  \\\n",
+       "0  2.012001e+09      4.0       1.0       1.0      3.0      77.0      88.0   \n",
+       "1  2.012001e+09      5.0       1.0       1.0      1.0      88.0      88.0   \n",
+       "2  2.012001e+09      9.0       2.0       2.0      4.0       2.0       2.0   \n",
+       "3  2.012001e+09      2.0       1.0       2.0      3.0      88.0      88.0   \n",
+       "4  2.012001e+09      9.0       1.0       1.0      4.0      15.0      88.0   \n",
        "\n",
-       "   PERSDOC2  MEDCOST  VETERAN3   ...     CHCOCNCR  CHCCOPD1  HAVARTH3  \\\n",
-       "0       1.0      2.0       1.0   ...          2.0       2.0       1.0   \n",
-       "1       1.0      2.0       1.0   ...          2.0       2.0       2.0   \n",
-       "2       1.0      2.0       2.0   ...          2.0       1.0       1.0   \n",
-       "3       1.0      2.0       2.0   ...          2.0       2.0       2.0   \n",
-       "4       1.0      2.0       2.0   ...          2.0       2.0       1.0   \n",
+       "   HLTHPLN1  PERSDOC2  MEDCOST   ...     CHCOCNCR  CHCCOPD1  HAVARTH3  \\\n",
+       "0       1.0       1.0      2.0   ...          2.0       2.0       1.0   \n",
+       "1       1.0       1.0      2.0   ...          2.0       2.0       2.0   \n",
+       "2       1.0       1.0      2.0   ...          2.0       1.0       1.0   \n",
+       "3       1.0       1.0      2.0   ...          2.0       2.0       2.0   \n",
+       "4       1.0       1.0      2.0   ...          2.0       2.0       1.0   \n",
        "\n",
        "   ADDEPEV2  CHCKIDNY  USEEQUIP  SMOKE100  STOPSMK2  LASTSMK2  USENOW3  \n",
        "0       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
@@ -298,10 +299,10 @@
        "3       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
        "4       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
        "\n",
-       "[5 rows x 40 columns]"
+       "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,9 +325,9 @@
     "\n",
     "\n",
     "# Test\n",
-    "df = pd.read_csv('.\\\\data\\\\brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
-    "print(df.shape)\n",
-    "df.head()"
+    "# df = pd.read_csv('.\\\\data\\\\brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
+    "# print(df.shape)\n",
+    "# df.head()"
    ]
   },
   {
