--- a/Study/BRFSS Data Prep.ipynb
+++ b/Study/BRFSS Data Prep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -23,11 +23,12 @@
       "Completed:  ..\\data\\sas Xport files\\LLCP2014.XPT\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1432124 entries, 0 to 464663\n",
-      "Data columns (total 41 columns):\n",
+      "Data columns (total 42 columns):\n",
       "SEQNO       1432124 non-null float64\n",
       "_INCOMG     1432124 non-null float64\n",
       "_IMPRACE    1432124 non-null float64\n",
       "_AGE65YR    1432124 non-null float64\n",
+      "_AGE_G      1432124 non-null float64\n",
       "GENHLTH     1432109 non-null float64\n",
       "PHYSHLTH    1432109 non-null float64\n",
       "MENTHLTH    1432114 non-null float64\n",
@@ -65,8 +66,8 @@
       "STOPSMK2    218909 non-null float64\n",
       "LASTSMK2    402083 non-null float64\n",
       "USENOW3     1394410 non-null float64\n",
-      "dtypes: float64(41)\n",
-      "memory usage: 458.9 MB\n"
+      "dtypes: float64(42)\n",
+      "memory usage: 469.8 MB\n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2013.XPT\",\n",
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2014.XPT\"]\n",
     "\n",
-    "cols_to_read = ['SEQNO', '_INCOMG',  '_IMPRACE', '_AGE65YR', 'GENHLTH', 'PHYSHLTH',\n",
+    "cols_to_read = ['SEQNO', '_INCOMG',  '_IMPRACE', '_AGE65YR', '_AGE_G', 'GENHLTH', 'PHYSHLTH',\n",
     "                'MENTHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'VETERAN3', \n",
     "                'MARITAL', 'EDUCA', 'CHECKUP1', 'INCOME2', 'SEX', \n",
     "                'SMOKDAY2', 'AVEDRNK2', 'RRCLASS2', 'RRATWRK2', 'RRHCARE3', \n",
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -116,195 +117,8 @@
      "text": [
       "creating archive\n",
       "adding brfss2012_2014.csv\n",
-      "closing\n",
-      "(1432124, 41)\n"
+      "closing\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SEQNO</th>\n",
-       "      <th>_INCOMG</th>\n",
-       "      <th>_IMPRACE</th>\n",
-       "      <th>_AGE65YR</th>\n",
-       "      <th>GENHLTH</th>\n",
-       "      <th>PHYSHLTH</th>\n",
-       "      <th>MENTHLTH</th>\n",
-       "      <th>HLTHPLN1</th>\n",
-       "      <th>PERSDOC2</th>\n",
-       "      <th>MEDCOST</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CHCOCNCR</th>\n",
-       "      <th>CHCCOPD1</th>\n",
-       "      <th>HAVARTH3</th>\n",
-       "      <th>ADDEPEV2</th>\n",
-       "      <th>CHCKIDNY</th>\n",
-       "      <th>USEEQUIP</th>\n",
-       "      <th>SMOKE100</th>\n",
-       "      <th>STOPSMK2</th>\n",
-       "      <th>LASTSMK2</th>\n",
-       "      <th>USENOW3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.012001e+09</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.012001e+09</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.012001e+09</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.012001e+09</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.012001e+09</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          SEQNO  _INCOMG  _IMPRACE  _AGE65YR  GENHLTH  PHYSHLTH  MENTHLTH  \\\n",
-       "0  2.012001e+09      4.0       1.0       1.0      3.0      77.0      88.0   \n",
-       "1  2.012001e+09      5.0       1.0       1.0      1.0      88.0      88.0   \n",
-       "2  2.012001e+09      9.0       2.0       2.0      4.0       2.0       2.0   \n",
-       "3  2.012001e+09      2.0       1.0       2.0      3.0      88.0      88.0   \n",
-       "4  2.012001e+09      9.0       1.0       1.0      4.0      15.0      88.0   \n",
-       "\n",
-       "   HLTHPLN1  PERSDOC2  MEDCOST   ...     CHCOCNCR  CHCCOPD1  HAVARTH3  \\\n",
-       "0       1.0       1.0      2.0   ...          2.0       2.0       1.0   \n",
-       "1       1.0       1.0      2.0   ...          2.0       2.0       2.0   \n",
-       "2       1.0       1.0      2.0   ...          2.0       1.0       1.0   \n",
-       "3       1.0       1.0      2.0   ...          2.0       2.0       2.0   \n",
-       "4       1.0       1.0      2.0   ...          2.0       2.0       1.0   \n",
-       "\n",
-       "   ADDEPEV2  CHCKIDNY  USEEQUIP  SMOKE100  STOPSMK2  LASTSMK2  USENOW3  \n",
-       "0       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
-       "1       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
-       "2       1.0       1.0       1.0       1.0       NaN       7.0      3.0  \n",
-       "3       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
-       "4       2.0       2.0       2.0       2.0       NaN       NaN      3.0  \n",
-       "\n",
-       "[5 rows x 41 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
