--- a/Study/BRFSS Data Prep.ipynb
+++ b/Study/BRFSS Data Prep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
       "Completed:  ..\\data\\sas Xport files\\LLCP2014.XPT\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1432124 entries, 0 to 464663\n",
-      "Data columns (total 42 columns):\n",
+      "Data columns (total 34 columns):\n",
       "SEQNO       1432124 non-null float64\n",
       "_INCOMG     1432124 non-null float64\n",
       "_IMPRACE    1432124 non-null float64\n",
@@ -35,24 +35,16 @@
       "HLTHPLN1    1432122 non-null float64\n",
       "PERSDOC2    1432122 non-null float64\n",
       "MEDCOST     1432121 non-null float64\n",
-      "VETERAN3    1431093 non-null float64\n",
       "MARITAL     1430329 non-null float64\n",
       "EDUCA       1429383 non-null float64\n",
       "CHECKUP1    1432121 non-null float64\n",
       "INCOME2     1426267 non-null float64\n",
       "SEX         1432124 non-null float64\n",
       "SMOKDAY2    622351 non-null float64\n",
-      "AVEDRNK2    685267 non-null float64\n",
-      "RRCLASS2    54698 non-null float64\n",
-      "RRATWRK2    28904 non-null float64\n",
-      "RRHCARE3    54581 non-null float64\n",
-      "RRPHYSM2    54523 non-null float64\n",
-      "RREMTSM2    54490 non-null float64\n",
       "EXERANY2    1400796 non-null float64\n",
       "CVDINFR4    1432122 non-null float64\n",
       "CVDCRHD4    1432124 non-null float64\n",
       "CVDSTRK3    1432124 non-null float64\n",
-      "SCNTPAID    66396 non-null float64\n",
       "ASTHMA3     1432124 non-null float64\n",
       "ASTHNOW     189403 non-null float64\n",
       "CHCSCNCR    1432116 non-null float64\n",
@@ -66,8 +58,8 @@
       "STOPSMK2    218909 non-null float64\n",
       "LASTSMK2    402083 non-null float64\n",
       "USENOW3     1394410 non-null float64\n",
-      "dtypes: float64(42)\n",
-      "memory usage: 469.8 MB\n"
+      "dtypes: float64(34)\n",
+      "memory usage: 382.4 MB\n"
      ]
     }
    ],
@@ -80,11 +72,10 @@
     "             \"..\\\\data\\\\sas Xport files\\\\LLCP2014.XPT\"]\n",
     "\n",
     "cols_to_read = ['SEQNO', '_INCOMG',  '_IMPRACE', '_AGE65YR', '_AGE_G', 'GENHLTH', 'PHYSHLTH',\n",
-    "                'MENTHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', 'VETERAN3', \n",
+    "                'MENTHLTH', 'HLTHPLN1', 'PERSDOC2', 'MEDCOST', \n",
     "                'MARITAL', 'EDUCA', 'CHECKUP1', 'INCOME2', 'SEX', \n",
-    "                'SMOKDAY2', 'AVEDRNK2', 'RRCLASS2', 'RRATWRK2', 'RRHCARE3', \n",
-    "                'RRPHYSM2', 'RREMTSM2', 'EXERANY2', 'CVDINFR4', \n",
-    "                'CVDCRHD4', 'CVDSTRK3', 'SCNTPAID', \n",
+    "                'SMOKDAY2', 'EXERANY2', 'CVDINFR4', \n",
+    "                'CVDCRHD4', 'CVDSTRK3',\n",
     "                'ASTHMA3', 'ASTHNOW', 'CHCSCNCR', 'CHCOCNCR', 'CHCCOPD1', \n",
     "                'HAVARTH3', 'ADDEPEV2', 'CHCKIDNY', 'USEEQUIP', 'SMOKE100',  \n",
     "                'STOPSMK2', 'LASTSMK2', 'USENOW3']\n",
@@ -93,6 +84,10 @@
     "# ['_AGE80' 'PYSHLTH' 'EMPLOY1' 'SCNTMEL1' 'SXORIENT' 'TRNDGNDR'] not in index\n",
     "# ['SLEPTIM1' 'BLIND' 'DECIDE' 'DIFFWALK' 'DIFFDRES' 'DIFFALON' '_IMPMRTL'] not in index\n",
     "# \"['LASTDEN3' 'RMVTETH3'] not in index\"\n",
+    "\n",
+    "# Removed - not in draft:\n",
+    "# 'RRCLASS2', 'RRATWRK2', 'RRHCARE3', 'RRPHYSM2', 'RREMTSM2',\n",
+    "# 'AVEDRNK2', 'SCNTPAID', 'VETERAN3',\n",
     "\n",
     "df12_14 = pd.DataFrame()\n",
     "for sas_file in sas_files:\n",
@@ -106,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
